integrada interface de abas

--- a/forms/uFodastico.lfm
+++ b/forms/uFodastico.lfm
@@ -1,242 +1,257 @@
-object frmFodastico: TfrmFodastico
-  Left = 629
-  Height = 357
-  Top = 54
-  Width = 440
+inherited frmFodastico: TfrmFodastico
+  Left = 449
+  Height = 523
+  Top = 83
+  Width = 757
   Caption = 'frmFodastico'
-  ClientHeight = 357
-  ClientWidth = 440
+  ClientHeight = 523
+  ClientWidth = 757
   Constraints.MinHeight = 240
   Constraints.MinWidth = 440
   OnCreate = FormCreate
   OnDragDrop = FormDragDrop
   OnDragOver = FormDragOver
-  LCLVersion = '0.9.30'
-  object Panel1: TPanel
-    Left = 0
-    Height = 357
-    Top = 0
-    Width = 440
-    Align = alClient
-    ClientHeight = 357
-    ClientWidth = 440
-    TabOrder = 0
-    object Panel2: TPanel
-      Left = 1
-      Height = 300
-      Top = 56
-      Width = 208
-      Align = alLeft
-      Anchors = [akTop, akLeft, akRight, akBottom]
-      Caption = 'Panel2'
-      ClientHeight = 300
-      ClientWidth = 208
-      TabOrder = 0
-      object Edit1: TEdit
-        Left = 1
-        Height = 23
-        Top = 1
-        Width = 206
-        Align = alTop
-        TabOrder = 0
-        Text = 'Edit1'
+  inherited pnlRaizTdi: TPanel
+    Height = 523
+    Width = 757
+    ClientHeight = 523
+    ClientWidth = 757
+    inherited pnlControles: TPanel
+      Width = 755
+      ClientWidth = 755
+      inherited btnSeparar: TSpeedButton
+        Left = 693
       end
-      object TreeView1: TTreeView
-        Left = 1
-        Height = 275
-        Top = 24
-        Width = 206
-        Align = alClient
-        DefaultItemHeight = 17
-        PopupMenu = PopupMenu2
-        TabOrder = 1
-        OnDragDrop = TreeView1DragDrop
-        OnDragOver = FormDragOver
-        OnEdited = TreeView1Edited
-        OnEditingEnd = TreeView1EditingEnd
-        OnEnter = TreeView1Enter
-        OnKeyDown = TreeView1KeyDown
+      inherited btnclose: TSpeedButton
+        Left = 723
       end
     end
-    object Panel3: TPanel
-      Left = 214
-      Height = 300
-      Top = 56
-      Width = 225
+    object Panel1: TPanel[1]
+      Left = 1
+      Height = 499
+      Top = 23
+      Width = 755
       Align = alClient
-      Anchors = [akTop, akBottom]
-      ClientHeight = 300
-      ClientWidth = 225
+      ClientHeight = 499
+      ClientWidth = 755
       TabOrder = 1
-      object Memo1: TMemo
+      object Panel2: TPanel
         Left = 1
-        Height = 278
-        Top = 21
-        Width = 223
+        Height = 442
+        Top = 56
+        Width = 523
+        Align = alLeft
+        Anchors = [akTop, akLeft, akRight, akBottom]
+        Caption = 'Panel2'
+        ClientHeight = 442
+        ClientWidth = 523
+        TabOrder = 0
+        object Edit1: TEdit
+          Left = 1
+          Height = 23
+          Top = 1
+          Width = 521
+          Align = alTop
+          TabOrder = 0
+          Text = 'Edit1'
+        end
+        object TreeView1: TTreeView
+          Left = 1
+          Height = 417
+          Top = 24
+          Width = 521
+          Align = alClient
+          DefaultItemHeight = 17
+          PopupMenu = PopupMenu2
+          TabOrder = 1
+          OnDragDrop = TreeView1DragDrop
+          OnDragOver = FormDragOver
+          OnEdited = TreeView1Edited
+          OnEditingEnd = TreeView1EditingEnd
+          OnEnter = TreeView1Enter
+          OnKeyDown = TreeView1KeyDown
+        end
+      end
+      object Panel3: TPanel
+        Left = 529
+        Height = 442
+        Top = 56
+        Width = 225
         Align = alClient
-        Font.CharSet = 4
-        Lines.Strings = (
-          'Memo1'
-        )
-        ParentFont = False
-        ScrollBars = ssAutoBoth
-        TabOrder = 0
+        Anchors = [akTop, akBottom]
+        ClientHeight = 442
+        ClientWidth = 225
+        TabOrder = 1
+        object Memo1: TMemo
+          Left = 1
+          Height = 420
+          Top = 21
+          Width = 223
+          Align = alClient
+          Font.CharSet = 4
+          Lines.Strings = (
+            'Memo1'
+          )
+          ParentFont = False
+          ScrollBars = ssAutoBoth
+          TabOrder = 0
+        end
+        object ProgressBar1: TProgressBar
+          Left = 1
+          Height = 20
+          Top = 1
+          Width = 223
+          Align = alTop
+          OnContextPopup = ProgressBar1ContextPopup
+          TabOrder = 1
+        end
       end
-      object ProgressBar1: TProgressBar
+      object Panel4: TPanel
         Left = 1
-        Height = 20
+        Height = 55
         Top = 1
-        Width = 223
+        Width = 753
         Align = alTop
-        OnContextPopup = ProgressBar1ContextPopup
-        TabOrder = 1
-      end
-    end
-    object Panel4: TPanel
-      Left = 1
-      Height = 55
-      Top = 1
-      Width = 438
-      Align = alTop
-      ClientHeight = 55
-      ClientWidth = 438
-      TabOrder = 2
-      object btnAbrirtexto: TBitBtn
-        Left = 255
-        Height = 24
-        Top = -1
-        Width = 96
-        Caption = 'Abre texto'
-        Glyph.Data = {
-          36040000424D3604000000000000360000002800000010000000100000000100
-          20000000000000040000640000006400000000000000000000002C86D8D12D88
-          D8F72D87D8F72D88D8F72D88D8F72D88D8F72D88D8F72D88D8F72D88D8F72D88
-          D8F72D88D8F72D87D8F72D88D8F72C86D8D1FFFFFF00FFFFFF00338ED9FBDCF0
-          FAFF98E1F6FF95E0F6FF92DFF6FF8EDEF5FF89DCF5FF85DAF4FF80D9F4FF7AD7
-          F3FF74D5F3FF70D3F2FFC2EAF8FF3594DAFFFFFFFF00FFFFFF003594DAF7EFFA
-          FEFF93E5F8FF8FE4F8FF89E3F8FF82E1F7FF7ADFF7FF71DEF6FF67DBF5FF5BD8
-          F4FF4DD4F3FF40D1F2FFCAF2FBFF3594DAFFFFFFFF00FFFFFF00369ADAF8F2FA
-          FDFF94E6F8FF92E5F8FF90E5F8FF8BE3F8FF86E2F7FF7FE1F7FF77DEF6FF6CDC
-          F6FF5ED9F4FF4FD5F3FFCCF2FBFF3594DAFFFFFFFF00FFFFFF0036A1DAF9F6FC
-          FEFF94E5F8FF93E5F8FF93E5F8FF91E5F8FF93DBE9FF93D7E3FF93D2DCFF90CE
-          D7FF8CC8CFFF86C1C6FFC9D8D6FF3594DAFFC57444E8CA7F53F137A6DAFAFEFF
-          FFFFF8FDFFFFF6FDFFFFF5FCFFFFF3FCFEFF9AE4F4FF9AE6F7FF9BE6F6FF9DE5
-          F5FF9EE5F5FF9FE5F4FFDAF3F8FF3594DAFFFDF4EEFFCA8054F935ABDAFAE8F6
-          FBFF70BCE7FF55AAE2FF4DA5E0FF91C9EBFFFAF3EFFFFDFEFDFFFFFDFCFFFFFD
-          FCFFFEFDFCFFFEFCFBFFFEFEFDFF3594DAFFEFF2E8FFCE8156FF36AADAF2F1FA
-          FDFF94DEF5FF93DCF4FF64BCE9FF3594DAFF3594DAFF3594DAFF3594DAFF3594
-          DAFF3594DAFF3594DAFF3594DAFF3594DAFFFBF6EFFFCC8355FE35AFDAF0F7FC
-          FEFF8EE4F8FF91DEF5FF9FE0F5FFACE1F6FFCA8452FFFFF7F1FFFFE9D9FFFFEA
-          DBFFFFE9D9FFFFE7D7FFFFE5D2FFFFE2CBFFFFF7F1FFCB8555FE36B3DAF8FDFE
-          FEFFFEFFFFFFFEFEFFFFFDFEFFFFFEFFFFFFE4BA91FFFFF7F0FFFFE7D5FFFDE7
-          D6FFFDE6D4FFFCE4D0FFFBE3CBFFFADCC2FFFEF3E8FFCC8656FE34B4D9D05EC2
-          E1FA60C3E2FA60C3E2FA60C3E2FA5FC3E2FAE4BB91FFFFF7F2FFFEE7D5FFFEE7
-          D5FFFDE5D1FFFAE0CAFFF9DEC4FFF7D9BCFFFDF2E7FFCC8757FEFFFFFF00FFFF
-          FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00E4BB92FFFEF7F1FFFCE5D2FFFCE4
-          D1FFFBE2CCFFF9DDC4FFF6D7BBFFF3D1AFFFFAEFE4FFCC8758FEFFFFFF00FFFF
-          FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00E4BB92FFFEF6F0FFFCE2CDFFFCE3
-          CDFFFADFC8FFF7D9BCFFF5E9DDFFFAF3EBFFFBF8F3FFCA8353FEFFFFFF00FFFF
-          FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00E4BB93FFFEF5EDFFFCDEC5FFFBE0
-          C7FFF9DCC2FFF5D3B4FFFEF9F3FFFAE2C4FFECC193FFC37D4893FFFFFF00FFFF
-          FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00E5BE96FFFFFFFEFFFDF3E9FFFDF3
-          EAFFFCF2E8FFFAEFE3FFFAF2E7FFEABB88FFCF8555B3B4693D0CFFFFFF00FFFF
-          FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00EAC39DFFE6BF96FFE4BB92FFE4BB
-          92FFD1A06CF5D09E6DF6CC965FDAC479427EB2673C09FFFFFF00
-        }
-        OnClick = btnAbrirtextoClick
-        TabOrder = 0
-      end
-      object btnAbrirProcessado: TBitBtn
-        Left = 183
-        Height = 24
-        Top = -1
-        Width = 31
-        Glyph.Data = {
-          36040000424D3604000000000000360000002800000010000000100000000100
-          2000000000000004000064000000640000000000000000000000FFFFFF00FFFF
-          FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-          FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-          FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF008254249F764919E1714415E18254
-          24BAFFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00A37642FF9E70
-          3DFF986B38FF936533FF8D602EFF875A29FF825424FF936839FF906536FF7245
-          16FF6D4011FF693C0DFF65380AFF613406FF5E3103FF5B2E01FFAB7E4AFFB38B
-          5DFFB38B5DFFB38B5DFFB38B5DFFB38B5DFFB38B5DFF7D5121FF794C1DFFB38B
-          5DFFB38B5DFFB38B5DFFB38B5DFFB38B5DFFB38B5DFF683C0EFFB0834FFF9E70
-          3DFF986B38FF936533FF8D602EFF875A29FF825424FFAB9074FFAA8F73FF7245
-          16FF6D4011FF693C0DFF65380AFF613406FF5E3103FF6C3F12FFB68854FFA577
-          43FFF9F9F9FFF9F9F9FFF9F9F9FFF8F8F8FFF1F1F1FFE3E3E3FFF3F3F3FFF8F8
-          F8FFF9F9F9FFF8F8F8FFE9E9E9FFF8F8F8FF623507FF704416FFBA8D58FFAB7D
-          49FFF9F9F9FFF1F1F1FFEDEDEDFFE7E7E7FFD3D3D3FFA5A5A5FFD7D7D7FFF4F4
-          F4FFEEEEEEFFEAEAEAFFDCDCDCFFF8F8F8FF66390BFF74481AFFBE915CFFB183
-          4EFFF9F9F9FFCCCCCCFFC9C9C9FFC5C5C5FFD3D3D3FFA6A6A6FFD8D8D8FFF4F4
-          F4FFCACACAFFC6C6C6FFBABABAFFF8F8F8FF6B3E10FF7A4D1EFFC29560FFB789
-          53FFFAFAFAFFF1F1F1FFEDEDEDFFE9E9E9FFD4D4D4FFA6A6A6FFD8D8D8FFF5F5
-          F5FFEFEFEFFFEBEBEBFFDCDCDCFFF8F8F8FF714415FF7F5323FFC69862FFBC8E
-          58FFFAFAFAFFCCCCCCFFCACACAFFC5C5C5FFD4D4D4FFA7A7A7FFD8D8D8FFF5F5
-          F5FFCBCBCBFFC7C7C7FFBBBBBBFFF8F8F8FF774A1AFF845828FFC69963FFC193
-          5CFFFAFAFAFFF2F2F2FFEFEFEFFFEAEAEAFFD5D5D5FFB5B5B5FFDFDFDFFFF5F5
-          F5FFF1F1F1FFECECECFFDEDEDEFFF9F9F9FF7D5020FF8A5E2DFFC69963FFC597
-          60FFFAFAFAFFCDCDCDFFCACACAFFC6C6C6FFF2F2F2FFDDD8D2FFEBE5DFFFFCFC
-          FCFFCCCCCCFFC9C9C9FFBDBDBDFFF9F9F9FF845726FF916333FFC69963FFC89A
-          63FFFAFAFAFFFAFAFAFFFAFAFAFFF8F8F8FFD9C6B1FFB1834EE6AC7E4AE6D7C4
-          AFFFF9F9F9FFF9F9F9FFF9F9F9FFF9F9F9FF8B5D2CFF976938FFC99B6433C99B
-          64FFD3AE82FFD0AC80FFCEA97DFFCBA67BFFC6A074FFB789532DB2844F2DBB95
-          6AFFB8946AFFB49066FFAF8B62FFAB875EFF926432FF996C3933FFFFFF00C99B
-          6433C99B6433C99B6433C6986233C3955F33C0925C33FFFFFF00FFFFFF00B385
-          5033AE804C33A97B4733A37642339E703D33986B3833FFFFFF00FFFFFF00FFFF
-          FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-          FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00
-        }
-        TabOrder = 1
-      end
-      object Label1: TLabel
-        Left = 7
-        Height = 16
-        Top = 38
-        Width = 76
-        Caption = 'Organizar por:'
-        ParentColor = False
-      end
-      object cbxprocura: TComboBox
-        Left = 87
-        Height = 23
-        Top = 31
-        Width = 100
-        ItemHeight = 15
-        ItemIndex = 0
-        Items.Strings = (
-          'sujeitos'
-          'ações'
-          'alvos '
-          'referencias'
-          'quantificadores'
-          'adjetivos'
-        )
-        OnChange = cbxprocuraChange
+        ClientHeight = 55
+        ClientWidth = 753
         TabOrder = 2
-        Text = 'sujeitos'
+        object btnAbrirtexto: TBitBtn
+          Left = 255
+          Height = 24
+          Top = -1
+          Width = 96
+          Caption = 'Abre texto'
+          Glyph.Data = {
+            36040000424D3604000000000000360000002800000010000000100000000100
+            20000000000000040000640000006400000000000000000000002C86D8D12D88
+            D8F72D87D8F72D88D8F72D88D8F72D88D8F72D88D8F72D88D8F72D88D8F72D88
+            D8F72D88D8F72D87D8F72D88D8F72C86D8D1FFFFFF00FFFFFF00338ED9FBDCF0
+            FAFF98E1F6FF95E0F6FF92DFF6FF8EDEF5FF89DCF5FF85DAF4FF80D9F4FF7AD7
+            F3FF74D5F3FF70D3F2FFC2EAF8FF3594DAFFFFFFFF00FFFFFF003594DAF7EFFA
+            FEFF93E5F8FF8FE4F8FF89E3F8FF82E1F7FF7ADFF7FF71DEF6FF67DBF5FF5BD8
+            F4FF4DD4F3FF40D1F2FFCAF2FBFF3594DAFFFFFFFF00FFFFFF00369ADAF8F2FA
+            FDFF94E6F8FF92E5F8FF90E5F8FF8BE3F8FF86E2F7FF7FE1F7FF77DEF6FF6CDC
+            F6FF5ED9F4FF4FD5F3FFCCF2FBFF3594DAFFFFFFFF00FFFFFF0036A1DAF9F6FC
+            FEFF94E5F8FF93E5F8FF93E5F8FF91E5F8FF93DBE9FF93D7E3FF93D2DCFF90CE
+            D7FF8CC8CFFF86C1C6FFC9D8D6FF3594DAFFC57444E8CA7F53F137A6DAFAFEFF
+            FFFFF8FDFFFFF6FDFFFFF5FCFFFFF3FCFEFF9AE4F4FF9AE6F7FF9BE6F6FF9DE5
+            F5FF9EE5F5FF9FE5F4FFDAF3F8FF3594DAFFFDF4EEFFCA8054F935ABDAFAE8F6
+            FBFF70BCE7FF55AAE2FF4DA5E0FF91C9EBFFFAF3EFFFFDFEFDFFFFFDFCFFFFFD
+            FCFFFEFDFCFFFEFCFBFFFEFEFDFF3594DAFFEFF2E8FFCE8156FF36AADAF2F1FA
+            FDFF94DEF5FF93DCF4FF64BCE9FF3594DAFF3594DAFF3594DAFF3594DAFF3594
+            DAFF3594DAFF3594DAFF3594DAFF3594DAFFFBF6EFFFCC8355FE35AFDAF0F7FC
+            FEFF8EE4F8FF91DEF5FF9FE0F5FFACE1F6FFCA8452FFFFF7F1FFFFE9D9FFFFEA
+            DBFFFFE9D9FFFFE7D7FFFFE5D2FFFFE2CBFFFFF7F1FFCB8555FE36B3DAF8FDFE
+            FEFFFEFFFFFFFEFEFFFFFDFEFFFFFEFFFFFFE4BA91FFFFF7F0FFFFE7D5FFFDE7
+            D6FFFDE6D4FFFCE4D0FFFBE3CBFFFADCC2FFFEF3E8FFCC8656FE34B4D9D05EC2
+            E1FA60C3E2FA60C3E2FA60C3E2FA5FC3E2FAE4BB91FFFFF7F2FFFEE7D5FFFEE7
+            D5FFFDE5D1FFFAE0CAFFF9DEC4FFF7D9BCFFFDF2E7FFCC8757FEFFFFFF00FFFF
+            FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00E4BB92FFFEF7F1FFFCE5D2FFFCE4
+            D1FFFBE2CCFFF9DDC4FFF6D7BBFFF3D1AFFFFAEFE4FFCC8758FEFFFFFF00FFFF
+            FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00E4BB92FFFEF6F0FFFCE2CDFFFCE3
+            CDFFFADFC8FFF7D9BCFFF5E9DDFFFAF3EBFFFBF8F3FFCA8353FEFFFFFF00FFFF
+            FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00E4BB93FFFEF5EDFFFCDEC5FFFBE0
+            C7FFF9DCC2FFF5D3B4FFFEF9F3FFFAE2C4FFECC193FFC37D4893FFFFFF00FFFF
+            FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00E5BE96FFFFFFFEFFFDF3E9FFFDF3
+            EAFFFCF2E8FFFAEFE3FFFAF2E7FFEABB88FFCF8555B3B4693D0CFFFFFF00FFFF
+            FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00EAC39DFFE6BF96FFE4BB92FFE4BB
+            92FFD1A06CF5D09E6DF6CC965FDAC479427EB2673C09FFFFFF00
+          }
+          OnClick = btnAbrirtextoClick
+          TabOrder = 0
+        end
+        object btnAbrirProcessado: TBitBtn
+          Left = 183
+          Height = 24
+          Top = -1
+          Width = 31
+          Glyph.Data = {
+            36040000424D3604000000000000360000002800000010000000100000000100
+            2000000000000004000064000000640000000000000000000000FFFFFF00FFFF
+            FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+            FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+            FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF008254249F764919E1714415E18254
+            24BAFFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00A37642FF9E70
+            3DFF986B38FF936533FF8D602EFF875A29FF825424FF936839FF906536FF7245
+            16FF6D4011FF693C0DFF65380AFF613406FF5E3103FF5B2E01FFAB7E4AFFB38B
+            5DFFB38B5DFFB38B5DFFB38B5DFFB38B5DFFB38B5DFF7D5121FF794C1DFFB38B
+            5DFFB38B5DFFB38B5DFFB38B5DFFB38B5DFFB38B5DFF683C0EFFB0834FFF9E70
+            3DFF986B38FF936533FF8D602EFF875A29FF825424FFAB9074FFAA8F73FF7245
+            16FF6D4011FF693C0DFF65380AFF613406FF5E3103FF6C3F12FFB68854FFA577
+            43FFF9F9F9FFF9F9F9FFF9F9F9FFF8F8F8FFF1F1F1FFE3E3E3FFF3F3F3FFF8F8
+            F8FFF9F9F9FFF8F8F8FFE9E9E9FFF8F8F8FF623507FF704416FFBA8D58FFAB7D
+            49FFF9F9F9FFF1F1F1FFEDEDEDFFE7E7E7FFD3D3D3FFA5A5A5FFD7D7D7FFF4F4
+            F4FFEEEEEEFFEAEAEAFFDCDCDCFFF8F8F8FF66390BFF74481AFFBE915CFFB183
+            4EFFF9F9F9FFCCCCCCFFC9C9C9FFC5C5C5FFD3D3D3FFA6A6A6FFD8D8D8FFF4F4
+            F4FFCACACAFFC6C6C6FFBABABAFFF8F8F8FF6B3E10FF7A4D1EFFC29560FFB789
+            53FFFAFAFAFFF1F1F1FFEDEDEDFFE9E9E9FFD4D4D4FFA6A6A6FFD8D8D8FFF5F5
+            F5FFEFEFEFFFEBEBEBFFDCDCDCFFF8F8F8FF714415FF7F5323FFC69862FFBC8E
+            58FFFAFAFAFFCCCCCCFFCACACAFFC5C5C5FFD4D4D4FFA7A7A7FFD8D8D8FFF5F5
+            F5FFCBCBCBFFC7C7C7FFBBBBBBFFF8F8F8FF774A1AFF845828FFC69963FFC193
+            5CFFFAFAFAFFF2F2F2FFEFEFEFFFEAEAEAFFD5D5D5FFB5B5B5FFDFDFDFFFF5F5
+            F5FFF1F1F1FFECECECFFDEDEDEFFF9F9F9FF7D5020FF8A5E2DFFC69963FFC597
+            60FFFAFAFAFFCDCDCDFFCACACAFFC6C6C6FFF2F2F2FFDDD8D2FFEBE5DFFFFCFC
+            FCFFCCCCCCFFC9C9C9FFBDBDBDFFF9F9F9FF845726FF916333FFC69963FFC89A
+            63FFFAFAFAFFFAFAFAFFFAFAFAFFF8F8F8FFD9C6B1FFB1834EE6AC7E4AE6D7C4
+            AFFFF9F9F9FFF9F9F9FFF9F9F9FFF9F9F9FF8B5D2CFF976938FFC99B6433C99B
+            64FFD3AE82FFD0AC80FFCEA97DFFCBA67BFFC6A074FFB789532DB2844F2DBB95
+            6AFFB8946AFFB49066FFAF8B62FFAB875EFF926432FF996C3933FFFFFF00C99B
+            6433C99B6433C99B6433C6986233C3955F33C0925C33FFFFFF00FFFFFF00B385
+            5033AE804C33A97B4733A37642339E703D33986B3833FFFFFF00FFFFFF00FFFF
+            FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+            FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00
+          }
+          TabOrder = 1
+        end
+        object Label1: TLabel
+          Left = 7
+          Height = 16
+          Top = 38
+          Width = 76
+          Caption = 'Organizar por:'
+          ParentColor = False
+        end
+        object cbxprocura: TComboBox
+          Left = 87
+          Height = 23
+          Top = 31
+          Width = 100
+          ItemHeight = 15
+          ItemIndex = 0
+          Items.Strings = (
+            'sujeitos'
+            'ações'
+            'alvos '
+            'referencias'
+            'quantificadores'
+            'adjetivos'
+          )
+          OnChange = cbxprocuraChange
+          TabOrder = 2
+          Text = 'sujeitos'
+        end
       end
-    end
-    object Splitter1: TSplitter
-      Left = 209
-      Height = 300
-      Top = 56
-      Width = 5
+      object Splitter1: TSplitter
+        Left = 524
+        Height = 442
+        Top = 56
+        Width = 5
+      end
     end
   end
-  object OpenDialogtexto: TOpenDialog
+  object OpenDialogtexto: TOpenDialog[2]
     left = 336
     top = 40
   end
-  object SaveDialog1: TSaveDialog
+  object SaveDialog1: TSaveDialog[3]
     left = 272
     top = 120
   end
-  object OpenDialogXML: TOpenDialog
+  object OpenDialogXML: TOpenDialog[4]
     left = 376
     top = 104
   end
-  object PopupMenu1: TPopupMenu
+  object PopupMenu1: TPopupMenu[5]
     left = 392
     object mnumover: TMenuItem
       Caption = 'mover aqui'
@@ -356,7 +371,7 @@ object frmFodastico: TfrmFodastico
       }
     end
   end
-  object PopupMenu2: TPopupMenu
+  object PopupMenu2: TPopupMenu[6]
     left = 392
     top = 48
     object mniAddNO: TMenuItem
